--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -38,32 +38,32 @@ base + typography > general layout > grid > page layout > components
 */
 
 @mixin respondMaxPX($px) {
-    @media (max-width: #{$px/16}em) { @content };
+    @media only screen and (max-width: #{$px/16}em) { @content };
 }
 @mixin respondMinPX($px) {
-    @media (min-width: #{$px/16}em) { @content };
+    @media only screen and (min-width: #{$px/16}em) { @content };
 }
 
 @mixin respond($breakpoint) {
 
     @if $breakpoint == phone {
         //600px/16px = 37.5em
-        @media (max-width: 37.5em) { @content };
+        @media only screen and (max-width: 37.5em) { @content };
     }
 
     @if $breakpoint == tab-port {
         //900px/16px = 56.25em
-        @media (max-width: 56.25em) { @content };
+        @media only screen and (max-width: 56.25em) { @content };
     }
 
     @if $breakpoint == tab-land {
         //1200px/16px = 37.5em
-        @media (max-width: 75rem) { @content };
+        @media only screen and (max-width: 75rem) { @content };
     }
 
     @if $breakpoint == big-desktop {
         //1800px/16px = 112.5em
-        @media (min-width: 180rem) { @content };
+        @media only screen and (min-width: 180rem) { @content };
     }
 
 }
