--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -164,7 +164,8 @@
         font-weight: 200;
     }
 
-    @include respond(tab-port) {
+    @media only screen and (max-width: 56.25em),
+           only screen and (hover: none) {
         height: auto;
         box-shadow: 0 2.5rem 4rem rgba($color-black, .25);
         max-width: 60rem;
